// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gameReducer -- the reducer for our game actions get the next question 1`] = `
Object {
  "accidentals": Object {
    "bassAccidental": false,
    "trebleIndices": Array [],
  },
  "answeredCorrectly": false,
  "chord": "♭III",
  "chordName": "Cb major",
  "chordSubset": Array [
    "i",
    "♭II",
    "ii°",
    "ii",
    "♭III",
    "iv",
    "v",
    "V",
    "♭VI",
    "vi",
    "♭VII",
    "vii°",
  ],
  "clicksPerRightAnswer": Array [],
  "gameNumber": 392549214,
  "gameOver": false,
  "gameType": "easyMinor",
  "giveUp": false,
  "guess": null,
  "guessN": 0,
  "introChordSequence": Array [
    Array [
      "G#/3",
      "D#/5",
      "G#/5",
      "B/5",
    ],
    Array [
      "C#/4",
      "C#/5",
      "E/5",
      "G#/5",
    ],
    Array [
      "D#/4",
      "A#/4",
      "D#/5",
      "G/5",
    ],
    Array [
      "G#/3",
      "B/4",
      "D#/5",
      "G#/5",
    ],
  ],
  "inversionN": 1,
  "inversions": false,
  "keyNameNotation": "Abm",
  "keyNameReadable": "Ab minor",
  "keyValue": "",
  "nAnsweredRight": 0,
  "notes": Object {
    "bass": "Cb/4",
    "treble": Array [
      "Cb/5",
      "Eb/5",
      "Gb/5",
    ],
  },
  "questionNumber": 2,
}
`;

exports[`gameReducer -- the reducer for our game actions make a guess 1`] = `
Object {
  "accidentals": Object {
    "bassAccidental": true,
    "trebleIndices": Array [
      0,
    ],
  },
  "answeredCorrectly": false,
  "chord": "vii°",
  "chordName": "G diminished",
  "chordSubset": Array [
    "i",
    "♭II",
    "ii°",
    "ii",
    "♭III",
    "iv",
    "v",
    "V",
    "♭VI",
    "vi",
    "♭VII",
    "vii°",
  ],
  "clicksPerRightAnswer": Array [],
  "gameNumber": 392549214,
  "gameOver": false,
  "gameType": "easyMinor",
  "giveUp": false,
  "guess": "iii",
  "guessN": 1,
  "introChordSequence": Array [
    Array [
      "G#/3",
      "D#/5",
      "G#/5",
      "B/5",
    ],
    Array [
      "C#/4",
      "C#/5",
      "E/5",
      "G#/5",
    ],
    Array [
      "D#/4",
      "A#/4",
      "D#/5",
      "G/5",
    ],
    Array [
      "G#/3",
      "B/4",
      "D#/5",
      "G#/5",
    ],
  ],
  "inversionN": 0,
  "inversions": false,
  "keyNameNotation": "Abm",
  "keyNameReadable": "Ab minor",
  "keyValue": "",
  "nAnsweredRight": 0,
  "notes": Object {
    "bass": "G/4",
    "treble": Array [
      "G/5",
      "Bb/5",
      "Db/6",
    ],
  },
  "questionNumber": 1,
}
`;

exports[`gameReducer -- the reducer for our game actions mark turn correct when the game is about to be over 1`] = `
Object {
  "accidentals": Object {
    "bassAccidental": true,
    "trebleIndices": Array [
      0,
    ],
  },
  "answeredCorrectly": true,
  "chord": "vii°",
  "chordName": "G diminished",
  "chordSubset": Array [
    "i",
    "♭II",
    "ii°",
    "ii",
    "♭III",
    "iv",
    "v",
    "V",
    "♭VI",
    "vi",
    "♭VII",
    "vii°",
  ],
  "clicksPerRightAnswer": Array [
    1,
  ],
  "gameNumber": 392549214,
  "gameOver": true,
  "gameType": "easyMinor",
  "guess": "iii",
  "guessN": 1,
  "introChordSequence": Array [
    Array [
      "G#/3",
      "D#/5",
      "G#/5",
      "B/5",
    ],
    Array [
      "C#/4",
      "C#/5",
      "E/5",
      "G#/5",
    ],
    Array [
      "D#/4",
      "A#/4",
      "D#/5",
      "G/5",
    ],
    Array [
      "G#/3",
      "B/4",
      "D#/5",
      "G#/5",
    ],
  ],
  "inversionN": 0,
  "inversions": false,
  "keyNameNotation": "Abm",
  "keyNameReadable": "Ab minor",
  "keyValue": "",
  "nAnsweredRight": 1,
  "notes": Object {
    "bass": "G/4",
    "treble": Array [
      "G/5",
      "Bb/5",
      "Db/6",
    ],
  },
  "questionNumber": 10,
}
`;

exports[`gameReducer -- the reducer for our game actions mark turn correct when the game isn't about to be over 1`] = `
Object {
  "accidentals": Object {
    "bassAccidental": true,
    "trebleIndices": Array [
      0,
    ],
  },
  "answeredCorrectly": true,
  "chord": "vii°",
  "chordName": "G diminished",
  "chordSubset": Array [
    "i",
    "♭II",
    "ii°",
    "ii",
    "♭III",
    "iv",
    "v",
    "V",
    "♭VI",
    "vi",
    "♭VII",
    "vii°",
  ],
  "clicksPerRightAnswer": Array [
    0,
  ],
  "gameNumber": 392549214,
  "gameOver": false,
  "gameType": "easyMinor",
  "guess": null,
  "guessN": 0,
  "introChordSequence": Array [
    Array [
      "G#/3",
      "D#/5",
      "G#/5",
      "B/5",
    ],
    Array [
      "C#/4",
      "C#/5",
      "E/5",
      "G#/5",
    ],
    Array [
      "D#/4",
      "A#/4",
      "D#/5",
      "G/5",
    ],
    Array [
      "G#/3",
      "B/4",
      "D#/5",
      "G#/5",
    ],
  ],
  "inversionN": 0,
  "inversions": false,
  "keyNameNotation": "Abm",
  "keyNameReadable": "Ab minor",
  "keyValue": "",
  "nAnsweredRight": 1,
  "notes": Object {
    "bass": "G/4",
    "treble": Array [
      "G/5",
      "Bb/5",
      "Db/6",
    ],
  },
  "questionNumber": 1,
}
`;

exports[`gameReducer -- the reducer for our game actions should have a consistent initial state 1`] = `
Object {
  "accidentals": Object {
    "bassAccidental": null,
    "trebleIndices": Array [],
  },
  "answeredCorrectly": null,
  "chord": null,
  "chordName": null,
  "chordSubset": Array [],
  "clicksPerRightAnswer": Array [],
  "gameNumber": null,
  "gameOver": false,
  "gameType": null,
  "giveUp": null,
  "guess": null,
  "guessN": 0,
  "introChordSequence": Array [
    Array [],
    Array [],
    Array [],
    Array [],
  ],
  "inversionN": null,
  "inversions": null,
  "keyNameNotation": null,
  "keyNameReadable": null,
  "keyValue": null,
  "nAnsweredRight": 0,
  "notes": Object {
    "bass": null,
    "treble": Array [],
  },
  "questionNumber": 0,
}
`;

exports[`gameReducer -- the reducer for our game actions should let us give up, when we don't know the answer 1`] = `
Object {
  "accidentals": Object {
    "bassAccidental": true,
    "trebleIndices": Array [
      0,
    ],
  },
  "answeredCorrectly": false,
  "chord": "vii°",
  "chordName": "G diminished",
  "chordSubset": Array [
    "i",
    "♭II",
    "ii°",
    "ii",
    "♭III",
    "iv",
    "v",
    "V",
    "♭VI",
    "vi",
    "♭VII",
    "vii°",
  ],
  "clicksPerRightAnswer": Array [],
  "gameNumber": 392549214,
  "gameOver": false,
  "gameType": "easyMinor",
  "giveUp": true,
  "guess": null,
  "guessN": 0,
  "introChordSequence": Array [
    Array [
      "G#/3",
      "D#/5",
      "G#/5",
      "B/5",
    ],
    Array [
      "C#/4",
      "C#/5",
      "E/5",
      "G#/5",
    ],
    Array [
      "D#/4",
      "A#/4",
      "D#/5",
      "G/5",
    ],
    Array [
      "G#/3",
      "B/4",
      "D#/5",
      "G#/5",
    ],
  ],
  "inversionN": 0,
  "inversions": false,
  "keyNameNotation": "Abm",
  "keyNameReadable": "Ab minor",
  "keyValue": "",
  "nAnsweredRight": 0,
  "notes": Object {
    "bass": "G/4",
    "treble": Array [
      "G/5",
      "Bb/5",
      "Db/6",
    ],
  },
  "questionNumber": 1,
}
`;

exports[`gameReducer -- the reducer for our game actions should register key presses 1`] = `
Object {
  "accidentals": Object {
    "bassAccidental": null,
    "trebleIndices": Array [],
  },
  "answeredCorrectly": null,
  "chord": null,
  "chordName": null,
  "chordSubset": Array [],
  "clicksPerRightAnswer": Array [],
  "gameNumber": null,
  "gameOver": false,
  "gameType": null,
  "giveUp": null,
  "guess": null,
  "guessN": 0,
  "introChordSequence": Array [
    Array [],
    Array [],
    Array [],
    Array [],
  ],
  "inversionN": null,
  "inversions": null,
  "keyNameNotation": null,
  "keyNameReadable": null,
  "keyValue": "Enter",
  "nAnsweredRight": 0,
  "notes": Object {
    "bass": null,
    "treble": Array [],
  },
  "questionNumber": 0,
}
`;

exports[`gameReducer -- the reducer for our game actions should start a new game 1`] = `
Object {
  "accidentals": Object {
    "bassAccidental": true,
    "trebleIndices": Array [
      0,
    ],
  },
  "answeredCorrectly": false,
  "chord": "vii°",
  "chordName": "G diminished",
  "chordSubset": Array [
    "i",
    "♭II",
    "ii°",
    "ii",
    "♭III",
    "iv",
    "v",
    "V",
    "♭VI",
    "vi",
    "♭VII",
    "vii°",
  ],
  "clicksPerRightAnswer": Array [],
  "gameNumber": 392549214,
  "gameOver": false,
  "gameType": "easyMinor",
  "giveUp": false,
  "guess": null,
  "guessN": 0,
  "introChordSequence": Array [
    Array [
      "G#/3",
      "D#/5",
      "G#/5",
      "B/5",
    ],
    Array [
      "C#/4",
      "C#/5",
      "E/5",
      "G#/5",
    ],
    Array [
      "D#/4",
      "A#/4",
      "D#/5",
      "G/5",
    ],
    Array [
      "G#/3",
      "B/4",
      "D#/5",
      "G#/5",
    ],
  ],
  "inversionN": 0,
  "inversions": false,
  "keyNameNotation": "Abm",
  "keyNameReadable": "Ab minor",
  "keyValue": "",
  "nAnsweredRight": 0,
  "notes": Object {
    "bass": "G/4",
    "treble": Array [
      "G/5",
      "Bb/5",
      "Db/6",
    ],
  },
  "questionNumber": 1,
}
`;
